[package]
name = "brane-prx"
edition = "2021"
authors = [ "Tim Müller" ]
rust-version = "1.81"
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.66"
dotenvy = "0.15"
env_logger = "0.11.0"
never-say-never = "6.6.666"
reqwest = { version = "0.12.0", features = ["json"] }
rustls = "0.21.6"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
socksx = { git = "https://github.com/braneframework/socksx", tag = "v2.0.0" }
tokio = { version = "1.38.0", default-features = false, features = ["macros", "rt", "signal"] }
tokio-rustls = "0.24.0"
url = "2.5.0"
warp = "0.3.2"

# Workspace dependencies
clap.workspace = true
error-trace.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

brane-cfg = { path = "../brane-cfg" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }

[lints]
workspace = true
