[package]
name = "brane-reg"
version = { workspace = true }
edition = "2021"
authors = [ "Tim Müller" ]
rust-version = "1.74.1"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.13", features = ["derive","env"] }
deliberation = { git = "https://github.com/epi-project/policy-reasoner" }
dotenvy = "0.15.0"
enum-debug = { git = "https://github.com/Lut99/enum-debug", tag = "v1.0.0" }
env_logger = "0.11.6"
error-trace = { git = "https://github.com/Lut99/error-trace-rs", tag = "v2.0.0" }
log = "0.4.22"
reqwest = "0.12.5"
rustls = "0.23.11"
serde = { version = "1.0.217", features = ["rc"] }
serde_json = "1.0.134"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
tempfile = "3.14.0"
tokio = { version = "1.42.0", features = ["rt","rt-multi-thread","macros","io-util", "signal"] }
tokio-rustls = "0.26.0"
tokio-stream = "0.1.17"
warp = "0.3.0"

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-exe = { path = "../brane-exe" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }
