[package]
name = "brane-reg"
edition = "2021"
authors = ["Tim Müller"]
rust-version = "1.82"
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.0", features = ["derive", "env"] }
dotenvy = "0.15.0"
enum-debug.workspace = true
env_logger = "0.11.0"
error-trace.workspace = true
log = "0.4.22"
rustls = "0.21.6"
serde = { version = "1.0.195", features = ["rc"] }
serde_json = "1.0.50"
serde_yaml = { version = "0.10.0", package = "serde_yaml_ng" }
tempfile = "3.10.1"
thiserror = "2.0.0"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros", "io-util", "signal"] }
tokio-rustls = "0.24.0"
warp = "0.3.2"

# Workspace dependencies
reqwest = { workspace = true }

brane-cfg = { path = "../brane-cfg" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
policy-reasoner = { git = "https://github.com/BraneFramework/policy-reasoner.git" }
specifications = { path = "../specifications" }

[lints]
workspace = true
