[package]
name = "brane-reg"
edition = "2021"
authors = ["Tim Müller"]
rust-version = "1.82"
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tempfile = "3.10.1"
tokio-rustls = "0.24.0"

# Workspace dependencies
clap.workspace = true
dotenvy.workspace = true
enum-debug.workspace = true
env_logger.workspace = true
error-trace.workspace = true
log.workspace = true
reqwest = { workspace = true }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "io-util", "signal"] }
warp.workspace = true

# Brane
brane-cfg.workspace = true
brane-shr.workspace = true
brane-tsk.workspace = true
policy-reasoner.workspace = true
specifications.workspace = true

[lints]
workspace = true
