[package]
name = "brane-shr"
edition = "2021"
rust-version = "1.81"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-compression = { version = "0.4.0", features = ["tokio","gzip"] }
console = "0.15.5"
dialoguer = { version = "0.11.0", features = ["completion", "history"] }
fs2 = "0.4.0"
hex = "0.4.3"
indicatif = "0.17.0"
regex = "1.5.1"
reqwest = { version = "0.12.0", features = ["stream"] }
sha2 = "0.10.6"
tokio = { version = "1.38.0", features = ["rt","macros"] }
tokio-stream = "0.1.6"
tokio-tar = "0.3.0"
url = "2.5.0"

# Workspace dependencies
enum-debug.workspace = true
thiserror.workspace = true
tracing.workspace = true

specifications = { path = "../specifications" }

[dev-dependencies]
rand = "0.9.0"
tempfile = "3.10.1"

[lints]
workspace = true
