[package]
name = "brane-shr"
edition = "2021"
rust-version = "1.82"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-compression = { version = "0.4.0", features = ["tokio", "gzip"] }
console = "0.15.5"
dialoguer = { version = "0.11.0", features = ["completion", "history"] }
fs2 = "0.4.0"
hex = "0.4.3"
indicatif = "0.17.0"
sha2 = "0.10.6"
tokio-stream = "0.1.16"
tokio-tar = "0.3.0"
url = "2.5.0"

# Workspace dependencies
enum-debug.workspace = true
humanlog.workspace = true
log.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["stream"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

specifications = { path = "../specifications" }

[dev-dependencies]
rand = "0.9.0"
tempfile = "3.10.1"

[lints]
workspace = true
