[package]
name = "brane-tsk"
edition = "2021"
rust-version = "1.82"
authors = ["Tim Müller"]
version.workspace = true
repository.workspace = true
license.workspace = true


[dependencies]
base64ct = { version = "1.6.0", features = ["alloc"] }
bollard = "0.18.0"
console = "0.15.5"
dialoguer = "0.11.0"
futures-util = "0.3.30"
graphql_client = "0.14.0"
num-traits = "0.2.18"
sha2 = "0.10.6"
tokio-tar = "0.3.0"
tokio-util = "0.7.1"
uuid = { version = "1.7.0", features = ["v4"] }

# Workspace dependencies
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
enum-debug.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["json", "stream", "multipart"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true

# Brane
brane-ast.workspace = true
brane-cfg.workspace = true
brane-exe.workspace = true
brane-shr.workspace = true
specifications.workspace = true


[dev-dependencies]
clap.workspace = true
humanlog.workspace = true
lazy_static.workspace = true


# [build-dependencies]
# tonic-build = "0.8"

[lints]
workspace = true
