[package]
name = "specifications"
rust-version = "1.81"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.67"
base64 = "0.22.0"
base64ct = { version = "1.6.0", features = ["std"] }
chrono = { version = "0.4.35", features = ["serde"] }
const_format = "0.2.22"
futures = "0.3.24"
jsonwebtoken = "9.2.0"
parking_lot = { version = "0.12.1", features = ["serde"] }
prost = "0.13.2"
reqwest = { version = "0.12.0", features = ["json", "stream"] }
semver = "1.0.0"
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.120"
serde_test = "1.0.0"
serde_with = "3.0.0"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
tonic = "0.12.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

# Workspace dependencies
enum-debug.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
strum = { workspace = true, features = ["derive"] }
clap.workspace = true

[lints]
workspace = true
