[package]
name = "specifications"
rust-version = "1.82"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
base64ct = { version = "1.6.0", features = ["std"] }
const_format = "0.2.22"
jsonwebtoken = "9.1.0"
num-traits = "0.2.18"
semver = "1.0.0"
serde_json_any_key = "2.0.0"
serde_test = "1.0.0"
serde_with = "3.0.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

# Workspace dependencies
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
enum-debug.workspace = true
futures.workspace = true
lazy_static.workspace = true
log.workspace = true
parking_lot = { workspace = true, features = ["serde"] }
prost.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
serde_yaml.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tonic.workspace = true

# Brane
policy-reasoner = { workspace = true, features = ["eflint-haskell-reasoner"] }
policy-store = { workspace = true, features = ["axum-server-spec"] }

# Workspace dependencies
reqwest = { workspace = true, features = ["json", "stream"] }

[lints]
workspace = true
