[package]
name = "xtask"
rust-version = "1.82.0"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
async-compression = { version = "0.4.0", features = ["tokio", "gzip"] }
clap_complete = "4.5.0"
clap_mangen = "0.2.26"
directories = "6.0.0"
flate2 = { version = "1.0.13" }
paste = "1.0.0"
tar = "0.4.21"
toml = "0.8.8"

# Workspace dependencies
anyhow.workspace = true
clap = { workspace = true, features = ["string"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Brane
specifications = { workspace = true }

# Optional
humantime = { version = "2.1.0", optional = true }
jsonwebtoken = { version = "9.1.0", optional = true }
semver = { version = "1.0.0", optional = true }

brane-cc = { workspace = true, optional = true }
brane-cfg = { workspace = true, optional = true }
brane-cli = { workspace = true, optional = true }
brane-ctl = { workspace = true, optional = true }
brane-dsl = { workspace = true, optional = true }
brane-shr = { workspace = true, optional = true }
brane-tsk = { workspace = true, optional = true }

[features]
default = ["cli"]
cli = [
    "dep:brane-cfg",
    "dep:brane-ctl",
    "dep:brane-cli",
    "dep:brane-shr",
    "dep:brane-tsk",
    "dep:brane-dsl",
    "dep:brane-cc",
    "dep:humantime",
    "dep:jsonwebtoken",
]
ci = ["dep:semver"]

[lints]
workspace = true
